--- a/BDS/pegasus/parallel/Makefile
+++ b/BDS/pegasus/parallel/Makefile
@@ -6,7 +6,7 @@
 PLATFORM = linux64
 GUROBI_PATH = /opt/uw/gurobi/8.1.1
 INC      = $(GUROBI_PATH)/include/
-CPP      = g++
+CPP      = mpicc
 STD      = -std=c++11 -D_GLIBCXX_USE_CXX11_ABI=0
 CARGS    = -m64 -O3
 GUROBI_CPPLIB   = -L $(GUROBI_PATH)/lib -lgurobi_c++ -lgurobi81
