--- a/BDS/pegasus/parallel/Makefile
+++ b/BDS/pegasus/parallel/Makefile
@@ -9,6 +9,8 @@ CPP = g++
 STD = -std=c++11 -D_GLIBCXX_USE_CXX11_ABI=0
 CARGS = -m64 -O3
 GUROBI_CPPLIB = -L $(GUROBI_PATH)/lib -lgurobi_c++ -lgurobi81
+
+# The following flags are only for debuging purposes
 SAN = -fsanitize=address -fsanitize=undefined -fno-sanitize-recover
 STL = -D_GLIBCXX_DEBUG -D_GLIBCXX_DEBUG_PEDANTIC -D_FORTIFY_SOURCE=2
 
