--- a/BDS/pegasus/old_versions/version_2/Makefile
+++ b/BDS/pegasus/old_versions/version_2/Makefile
@@ -10,10 +10,12 @@ CPP      = g++
 STD      = -std=c++11 -D_GLIBCXX_USE_CXX11_ABI=0
 CARGS    = -m64 -O3
 GUROBI_CPPLIB   = -L $(GUROBI_PATH)/lib -lgurobi_c++ -lgurobi81
+SAN = -fsanitize=address -fsanitize=undefined -fno-sanitize-recover
+STL = -D_GLIBCXX_DEBUG -D_GLIBCXX_DEBUG_PEDANTIC -D_FORTIFY_SOURCE=2
 
 
 % : %.cpp
-	$(CPP) $(CARGS) $(STD) -o $@ $< -I$(INC) $(GUROBI_CPPLIB) -lm -lemon -lstdc++fs
+	$(CPP) $(CARGS) $(STD) -o $@ $< -I$(INC) $(GUROBI_CPPLIB) -lm -lemon -lstdc++fs $(SAN) $(STL)
 #	$(CPP) -o $@ $
 
 # clean:
